--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="blue">#0887FF</color>
     <color name="white">#FFFFFF</color>
     <color name="lightblack">#3F3D56</color>
+    <color name="yellow">#EFDA1B</color>
+    <color name="red">#E55555</color>
 </resources>
