--- a/app/src/main/res/layout/activity_gitam_web.xml
+++ b/app/src/main/res/layout/activity_gitam_web.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
@@ -14,32 +12,35 @@
         android:orientation="vertical" >
 
         <ImageView
+            android:contentDescription="@string/club"
             android:id="@+id/brand"
             android:layout_width="162.83dp"
             android:layout_height="48dp"
             android:src="@drawable/flogo"
-            android:layout_marginLeft="67dp"
-            android:layout_marginRight="145.17dp"
+            android:layout_marginStart="67dp"
+            android:layout_marginEnd="145.17dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="15dp"/>
         <ImageView
+            android:contentDescription="@string/user"
             android:id="@+id/user"
-            android:layout_width="32.02dp"
-            android:layout_height="33.97dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:src="@drawable/avatar"
-            android:layout_marginLeft="315dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginStart="315dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="22.97dp"
-            android:layout_marginRight="27.98dp"/>
+            android:layout_marginEnd="27.98dp"/>
         <ImageView
+            android:contentDescription="@string/linee"
             android:id="@+id/threeline"
-            android:layout_width="29dp"
-            android:layout_height="20dp"
+            android:layout_width="50dp"
+            android:layout_height="40dp"
             android:src="@drawable/line"
             android:background="#FFFFFF"
-            android:layout_marginTop="34dp"
-            android:layout_marginRight="328dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginTop="17dp"
+            android:layout_marginEnd="328dp"
+            android:layout_marginStart="10dp"
             android:layout_marginBottom="31dp"
             />
         
@@ -52,9 +53,10 @@
         <TextView
             android:layout_width="160dp"
             android:layout_height="20dp"
-            android:text=" WEB DEVELOPMENT"
+            android:text="@string/web_development"
             android:textSize="15sp"
-            android:paddingLeft="5dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="0dp"
             android:layout_marginStart="132dp"
             android:background="@drawable/rounded_text1"
             android:textColor="@color/white"/>
@@ -67,15 +69,16 @@
             android:text="@string/name_contact"
             android:textSize="15sp"
             android:layout_marginTop="70dp"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:id="@+id/number"
-            android:text="   970XXXXXXX"
-            android:paddingStart="5dp"
+            android:text="@string/_970xxxxxxx"
+            android:paddingStart="15dp"
+            android:paddingEnd="1dp"
             android:textSize="15sp"
             android:layout_marginTop="68dp"
 
@@ -88,11 +91,11 @@
             android:layout_width="161dp"
             android:layout_height="28dp"
             android:id="@+id/editetxt1"
-            android:hint="  John Nauman "
+            android:hint="@string/john_nauman"
             android:textStyle="normal"
             android:inputType="textMultiLine"
             android:background="@drawable/edittext1stroke"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="130dp"
             android:padding="2dp"
             android:textSize="15sp"/>
@@ -102,11 +105,12 @@
             android:layout_width="161dp"
             android:layout_height="28dp"
             android:id="@+id/edittext2"
-            android:hint="  Nequlin "
+            android:hint="@string/nequlin"
+            android:paddingStart="10dp"
+            android:paddingEnd="1dp"
             android:layout_marginTop="130dp"
             android:layout_marginStart="232dp"
             android:background="@drawable/edittext1stroke"
-            android:padding="2dp"
             android:textSize="15sp"
             />
 
@@ -114,11 +118,12 @@
             android:layout_width="374dp"
             android:layout_height="28dp"
             android:id="@+id/edittext3"
-            android:hint="  itsmannaquein@look.com  "
-            android:padding="2dp"
+            android:hint="@string/itsmannaquein_look_com"
+            android:paddingStart="10dp"
+            android:paddingEnd="1dp"
 
             android:layout_marginTop="175dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:textSize="15sp"
             android:background="@drawable/edittext1stroke"
             />
@@ -126,10 +131,11 @@
             android:layout_width="374dp"
             android:layout_height="28dp"
             android:id="@+id/edittext4"
-            android:hint=" itsmananquein "
-            android:paddingLeft="10dp"
+            android:hint="@string/itsmananquein"
+            android:paddingStart="10dp"
+            android:paddingEnd="0dp"
             android:layout_marginTop="215dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:textSize="15sp"
             android:background="@drawable/edittext1stroke"
             />
@@ -147,7 +153,7 @@
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:id="@+id/college"
-         android:text="COLLEGE"
+         android:text="@string/college"
          android:textSize="15sp"
          android:layout_marginTop="25dp"
          android:layout_marginStart="20dp"/>
@@ -156,7 +162,7 @@
             android:id="@+id/gitam"
             android:layout_width="80dp"
             android:layout_height="30dp"
-            android:text="GITAM"
+            android:text="@string/gitam"
             android:textColor="@color/white"
             android:background="@drawable/rounded_text1"
             android:textSize="15sp"
@@ -167,9 +173,10 @@
         <Button
             android:layout_width="80dp"
             android:layout_height="30dp"
-            android:text="OTHER"
+            android:text="@string/other"
             android:textColor="@color/blue"
-            android:paddingRight="10dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="10dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/numberstroke"
             android:layout_marginStart="315dp"
@@ -180,8 +187,9 @@
             android:layout_width="374dp"
             android:layout_height="30dp"
             android:layout_marginTop="70dp"
-            android:hint="  CSE "
-            android:paddingLeft="10dp"
+            android:hint="@string/cse"
+            android:paddingStart="10dp"
+            android:paddingEnd="0dp"
             android:textSize="15sp"
             android:layout_marginStart="20dp"
             android:background="@drawable/edittext1stroke"
@@ -191,8 +199,9 @@
             android:layout_width="374dp"
             android:layout_height="28dp"
             android:layout_marginTop="110dp"
-            android:hint=" 121710XXXXXX "
-            android:paddingLeft="10dp"
+            android:hint="@string/_121710xxxxxx"
+            android:paddingStart="10dp"
+            android:paddingEnd="0dp"
             android:layout_marginStart="20dp"
             android:background="@drawable/edittext1stroke"
             android:textSize="15sp"
@@ -201,7 +210,7 @@
         <TextView
             android:layout_width="100dp"
             android:layout_height="20dp"
-            android:text="Years of study"
+            android:text="@string/years_of_study"
             android:layout_marginTop="180dp"
             android:layout_marginStart="20dp"
             android:textSize="15sp"
@@ -220,7 +229,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:id="@+id/to"
-            android:text=" to "
+            android:text="@string/to"
             android:textColor="@color/blue"
             android:textSize="15sp"
             android:layout_marginTop="180dp"
@@ -241,8 +250,8 @@
             android:layout_width="90dp"
             android:layout_height="20dp"
             android:id="@+id/resume"
-            android:text="RESUME/CV"
-            android:textSize="15dp"
+            android:text="@string/resume_cv"
+            android:textSize="15sp"
             android:layout_marginTop="250dp"
             android:layout_marginStart="20dp"
             />
@@ -251,7 +260,7 @@
         <Button
             android:id="@+id/save"
             android:textSize="15sp"
-            android:text=" SAVE "
+            android:text="@string/save"
             android:background="@drawable/rounded_text1"
             android:textColor="@color/white"
             android:layout_width="60dp"
