--- a/app/src/main/res/drawable/bluecircle.xml
+++ b/app/src/main/res/drawable/bluecircle.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 
-    android:shape="rectangle"
+    android:shape="ring"
+
 
     >
+  <stroke android:color="@color/blue">
 
-    <solid android:color="@color/blue"></solid>
-    <corners android:radius="20dp"/>
+  </stroke>
+
+    <corners android:radius="2dp"></corners>
+
 
 
 </shape>
