--- a/app/src/main/res/layout/activity_club_member.xml
+++ b/app/src/main/res/layout/activity_club_member.xml
@@ -13,32 +13,35 @@
         android:orientation="vertical" >
 
         <ImageView
-            android:id="@+id/brand"
+            android:contentDescription="@string/company"
+            android:id="@+id/logo"
             android:layout_width="162.83dp"
             android:layout_height="48dp"
             android:src="@drawable/flogo"
-            android:layout_marginLeft="67dp"
-            android:layout_marginRight="145.17dp"
+            android:layout_marginStart="67dp"
+            android:layout_marginEnd="145.17dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="15dp"/>
         <ImageView
+            android:contentDescription="@string/userlogo"
             android:id="@+id/user"
-            android:layout_width="32.02dp"
-            android:layout_height="33.97dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:src="@drawable/avatar"
-            android:layout_marginLeft="315dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginStart="315dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="22.97dp"
-            android:layout_marginRight="27.98dp"/>
+            android:layout_marginEnd="27.98dp"/>
         <ImageView
+            android:contentDescription="@string/linee"
             android:id="@+id/threeline"
-            android:layout_width="35dp"
-            android:layout_height="30dp"
+            android:layout_width="50dp"
+            android:layout_height="40dp"
             android:src="@drawable/line"
             android:background="#FFFFFF"
-            android:layout_marginTop="24dp"
-            android:layout_marginRight="328dp"
-            android:layout_marginStart="20dp"
+            android:layout_marginTop="17dp"
+            android:layout_marginEnd="328dp"
+            android:layout_marginStart="10dp"
             android:layout_marginBottom="31dp"
             />
     </RelativeLayout>
@@ -50,6 +53,7 @@
         >
 
         <ImageView
+            android:contentDescription="@string/profilepicture"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginTop="20dp"
@@ -60,8 +64,8 @@
             android:id="@+id/registered"
             android:layout_width="90dp"
             android:layout_height="30dp"
-            android:text="REGISTERED"
-            android:textSize="15dp"
+            android:text="@string/registered"
+            android:textSize="15sp"
             android:layout_marginStart="246dp"
             android:layout_marginTop="25dp"
             android:background="@drawable/numberstroke"/>
@@ -70,8 +74,8 @@
             android:id="@+id/webdevelopment"
             android:layout_width="160dp"
             android:layout_height="30dp"
-            android:text=" WEB DEVELOPMENT "
-            android:textSize="15dp"
+            android:text="@string/web_development"
+            android:textSize="15sp"
             android:layout_marginStart="246dp"
             android:layout_marginTop="65dp"
             android:background="@drawable/numberstroke"
@@ -81,20 +85,21 @@
             android:id="@+id/editprofile"
             android:layout_width="135dp"
             android:layout_height="30dp"
-            android:text="EDIT PROFILE"
+            android:text="@string/edit_profile"
             android:layout_marginStart="246dp"
-            android:paddingLeft="4dp"
+            android:paddingStart="4dp"
+            android:paddingEnd="5dp"
             android:layout_marginTop="105dp"
             android:textColor="@color/blue"
             android:background="@drawable/numberstroke"
-            android:drawableRight="@drawable/settings"
+            android:drawableEnd="@drawable/settings"
             />
 
         <TextView
             android:layout_width="120dp"
             android:layout_height="30dp"
             android:id="@+id/number"
-            android:text="970XXXXXXX"
+            android:text="@string/_970xxxxxxx"
             android:textSize="15sp"
             android:layout_marginTop="185dp"
             android:layout_marginStart="40dp"
@@ -104,7 +109,7 @@
         <TextView
             android:layout_width="153dp"
             android:layout_height="30dp"
-            android:text="Johnman Nequin"
+            android:text="@string/johnman_nequin"
             android:textSize="20sp"
             android:textStyle="bold"
             android:layout_marginStart="40dp"
@@ -115,7 +120,7 @@
             android:layout_width="180dp"
             android:layout_height="30dp"
             android:id="@+id/username"
-            android:text="itsmannequin@look.com"
+            android:text="@string/itsmannequin_look_com"
             android:textSize="15sp"
             android:layout_marginStart="40dp"
             android:layout_marginTop="280dp"
@@ -125,7 +130,7 @@
             android:id="@+id/profilename"
             android:layout_width="180dp"
             android:layout_height="30dp"
-            android:text=" @itsmannequin"
+            android:text="@string/itsmannequin1"
             android:textSize="15sp"
             android:layout_marginStart="40dp"
             android:layout_marginTop="320dp"
@@ -162,6 +167,7 @@
             android:layout_marginTop="150dp"
             android:layout_marginStart="27dp"/>
         <ImageView
+            android:contentDescription="@string/grouplogo"
             android:layout_width="118dp"
             android:layout_height="90dp"
             android:id="@+id/membering"
