--- a/app/src/main/res/layout/activity_domain.xml
+++ b/app/src/main/res/layout/activity_domain.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical" >
 
         <ImageView
-            android:contentDescription="@string/logo"
+            android:contentDescription="@string/company"
             android:id="@+id/brand"
             android:layout_width="162.83dp"
             android:layout_height="48dp"
@@ -50,12 +50,12 @@
 
 
 
-<view class="android.support.v7.app.AlertController$RecycleListView"
-    android:id="@+id/recyclerview"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    <view class="android.support.v7.app.AlertController$RecycleListView"
+        android:id="@+id/recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-</view>
+    </view>
 
 
 
