--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    
+
     tools:context=".MainActivity">
     
     <RelativeLayout
@@ -16,32 +14,35 @@
        android:orientation="vertical" >
 
         <ImageView
+            android:contentDescription="@string/logo"
             android:id="@+id/brand"
             android:layout_width="162.83dp"
             android:layout_height="48dp"
             android:src="@drawable/flogo"
-            android:layout_marginLeft="67dp"
-            android:layout_marginRight="145.17dp"
+            android:layout_marginStart="67dp"
+            android:layout_marginEnd="145.17dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="15dp"/>
         <ImageView
+            android:contentDescription="@string/user"
             android:id="@+id/user"
-            android:layout_width="32.02dp"
-            android:layout_height="33.97dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:src="@drawable/avatar"
-            android:layout_marginLeft="315dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginStart="315dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="22.97dp"
-            android:layout_marginRight="27.98dp"/>
+            android:layout_marginEnd="27.98dp"/>
         <ImageView
-            android:id="@+id/threeline"
-            android:layout_width="29dp"
-            android:layout_height="20dp"
+            android:contentDescription="@string/lines"
+            android:id="@+id/lines"
+            android:layout_width="50dp"
+            android:layout_height="40dp"
             android:src="@drawable/line"
             android:background="#FFFFFF"
-            android:layout_marginTop="34dp"
-            android:layout_marginRight="328dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginTop="17dp"
+            android:layout_marginEnd="328dp"
+            android:layout_marginStart="10dp"
             android:layout_marginBottom="31dp"
             />
 
@@ -59,12 +60,12 @@
             android:id="@+id/text1"
             android:layout_width="293dp"
             android:layout_height="67dp"
-            android:text="EARN WHILE"
+            android:text="@string/earn_while"
             android:textStyle="bold"
             android:textColor="#0887FF"
             android:textSize="40sp"
-            android:layout_marginLeft="41dp"
-            android:layout_marginRight="41dp"
+            android:layout_marginStart="78dp"
+            android:layout_marginEnd="41dp"
             android:layout_marginBottom="486dp"
             android:layout_marginTop="145dp"
             />
@@ -72,38 +73,39 @@
             android:id="@+id/text2"
             android:layout_width="285dp"
             android:layout_height="67dp"
-            android:text="YOU LEARN."
+            android:text="@string/you_learn"
             android:textColor="#0887FF"
             android:textStyle="bold"
             android:textSize="40sp"
             android:layout_marginTop="200dp"
             android:layout_marginBottom="476dp"
-            android:layout_marginRight="45dp"
-            android:layout_marginLeft="45dp"
+            android:layout_marginEnd="41dp"
+            android:layout_marginStart="78dp"
             />
         <Button
             android:id="@+id/button1"
             android:layout_width="88dp"
-            android:layout_height="21dp"
+            android:layout_height="26dp"
             android:background="@drawable/rounded_button"
-            android:text="APPLY NOW"
+            android:text="@string/apply_now"
             android:textSize="13sp"
             android:textColor="#FFFFFF"
             android:layout_marginTop="280dp"
-            android:layout_marginLeft="144dp"
-            android:layout_marginRight="143dp"
+            android:layout_marginStart="150dp"
+            android:layout_marginEnd="143dp"
             android:textStyle="normal"
 
             android:layout_marginBottom="354dp"
             />
         <ImageView
+            android:contentDescription="@string/imageview"
             android:id="@+id/lastimage"
             android:src="@drawable/component"
             android:layout_width="294dp"
             android:layout_height="206.28dp"
-            android:layout_marginTop="370dp"
-            android:layout_marginRight="41dp"
-            android:layout_marginLeft="40dp"
+            android:layout_marginTop="390dp"
+            android:layout_marginEnd="41dp"
+            android:layout_marginStart="40dp"
             />
         
     </RelativeLayout>
