--- a/app/src/main/res/layout/activity_pending_review.xml
+++ b/app/src/main/res/layout/activity_pending_review.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
@@ -13,32 +12,35 @@
         android:orientation="vertical" >
 
     <ImageView
+        android:contentDescription="@string/company"
         android:id="@+id/brand"
         android:layout_width="162.83dp"
         android:layout_height="48dp"
         android:src="@drawable/flogo"
-        android:layout_marginLeft="67dp"
-        android:layout_marginRight="145.17dp"
+        android:layout_marginStart="67dp"
+        android:layout_marginEnd="145.17dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="15dp"/>
     <ImageView
+        android:contentDescription="@string/userlogo"
         android:id="@+id/user"
-        android:layout_width="32.02dp"
-        android:layout_height="33.97dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:src="@drawable/avatar"
-        android:layout_marginLeft="315dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="315dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="22.97dp"
-        android:layout_marginRight="27.98dp"/>
+        android:layout_marginEnd="27.98dp"/>
     <ImageView
+        android:contentDescription="@string/linee"
         android:id="@+id/threeline"
-        android:layout_width="29dp"
-        android:layout_height="20dp"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
         android:src="@drawable/line"
         android:background="#FFFFFF"
-        android:layout_marginTop="34dp"
-        android:layout_marginRight="328dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginTop="17dp"
+        android:layout_marginEnd="328dp"
+        android:layout_marginStart="10dp"
         android:layout_marginBottom="31dp"
         />
     </RelativeLayout>
@@ -51,6 +53,7 @@
 
 
         <ImageView
+            android:contentDescription="@string/profilepicture"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginTop="20dp"
@@ -61,8 +64,8 @@
             android:id="@+id/registered"
             android:layout_width="90dp"
             android:layout_height="30dp"
-            android:text="REGISTERED"
-            android:textSize="15dp"
+            android:text="@string/registered"
+            android:textSize="15sp"
             android:layout_marginStart="246dp"
             android:layout_marginTop="25dp"
             android:background="@drawable/numberstroke"/>
@@ -71,8 +74,8 @@
             android:id="@+id/webdevelopment"
             android:layout_width="160dp"
             android:layout_height="30dp"
-            android:text=" WEB DEVELOPMENT "
-            android:textSize="15dp"
+            android:text="@string/web_development"
+            android:textSize="15sp"
             android:layout_marginStart="246dp"
             android:layout_marginTop="65dp"
             android:background="@drawable/numberstroke"
@@ -81,20 +84,21 @@
             android:id="@+id/editprofile"
             android:layout_width="135dp"
             android:layout_height="30dp"
-            android:text="EDIT PROFILE"
+            android:text="@string/edit_profile"
             android:layout_marginStart="246dp"
-            android:paddingLeft="4dp"
+            android:paddingStart="4dp"
+            android:paddingEnd="4dp"
             android:layout_marginTop="105dp"
             android:textColor="@color/blue"
             android:background="@drawable/numberstroke"
-            android:drawableRight="@drawable/settings"
+            android:drawableEnd="@drawable/settings"
             />
 
         <TextView
             android:layout_width="120dp"
             android:layout_height="30dp"
             android:id="@+id/number"
-            android:text="970XXXXXXX"
+            android:text="@string/_970xxxxxxx"
             android:textSize="15sp"
             android:layout_marginTop="185dp"
             android:layout_marginStart="40dp"
@@ -103,7 +107,7 @@
         <TextView
             android:layout_width="153dp"
             android:layout_height="30dp"
-            android:text="Johnman Nequin"
+            android:text="@string/johnman_nequin"
             android:textSize="20sp"
             android:textStyle="bold"
             android:layout_marginStart="40dp"
@@ -116,14 +120,14 @@
             android:layout_marginStart="40dp"
             android:layout_marginTop="280dp"
             android:background="@drawable/numberstroke"
-            android:text="itsmannequin@look.com"
+            android:text="@string/itsmannequin_look_com"
             android:textSize="15sp" />
 
         <TextView
             android:id="@+id/profilename"
             android:layout_width="180dp"
             android:layout_height="30dp"
-            android:text=" @itsmannequin"
+            android:text="@string/itsmannequin2"
             android:textSize="15sp"
             android:layout_marginStart="40dp"
             android:layout_marginTop="320dp"
@@ -142,13 +146,14 @@
             android:layout_width="175dp"
             android:layout_height="75dp"
             android:id="@+id/notapply"
-            android:text="You're an Applicant."
+            android:text="@string/you_re_an_applicant"
             android:textColor="@color/white"
-            android:textSize="30dp"
+            android:textSize="30sp"
             android:layout_marginStart="29dp"
             android:layout_marginTop="60dp"
             />
         <ImageView
+            android:contentDescription="@string/underprogress"
             android:layout_width="82dp"
             android:layout_height="75dp"
             android:id="@+id/info"
@@ -158,8 +163,8 @@
         <TextView
             android:layout_width="170dp"
             android:layout_height="30dp"
-            android:text="Application Status"
-            android:textSize="20dp"
+            android:text="@string/application_status"
+            android:textSize="20sp"
             android:textColor="@color/white"
             android:layout_marginTop="170dp"
             android:layout_marginStart="29dp"
@@ -171,7 +176,7 @@
             android:layout_marginTop="205dp"
             android:layout_marginStart="27dp"
             android:textSize="15sp"
-            android:text="PENDING REVIEW"
+            android:text="@string/pending_review"
             android:textColor="@color/yellow"
             android:background="@drawable/roundedwhite"
             />
@@ -181,7 +186,7 @@
             android:layout_marginStart="35dp"
             android:layout_marginTop="250dp"
             android:layout_marginEnd="81dp"
-            android:text="Our team will get back to you ASAP."
+            android:text="@string/our_team_will_get_back_to_you_asap"
             android:textColor="@color/white"
             android:textSize="15sp"/>
 
