--- a/app/src/main/res/layout/activity_web_development.xml
+++ b/app/src/main/res/layout/activity_web_development.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,32 +13,35 @@
         android:orientation="vertical" >
 
         <ImageView
+            android:contentDescription="@string/company"
             android:id="@+id/brand"
             android:layout_width="162.83dp"
             android:layout_height="48dp"
             android:src="@drawable/flogo"
-            android:layout_marginLeft="67dp"
-            android:layout_marginRight="145.17dp"
+            android:layout_marginStart="67dp"
+            android:layout_marginEnd="145.17dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="15dp"/>
         <ImageView
+            android:contentDescription="@string/userlogo"
             android:id="@+id/user"
-            android:layout_width="32.02dp"
-            android:layout_height="33.97dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:src="@drawable/avatar"
-            android:layout_marginLeft="315dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginStart="315dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="22.97dp"
-            android:layout_marginRight="27.98dp"/>
+            android:layout_marginEnd="27.98dp"/>
         <ImageView
+            android:contentDescription="@string/linee"
             android:id="@+id/threeline"
-            android:layout_width="29dp"
-            android:layout_height="20dp"
+            android:layout_width="50dp"
+            android:layout_height="40dp"
             android:src="@drawable/line"
             android:background="#FFFFFF"
-            android:layout_marginTop="34dp"
-            android:layout_marginRight="328dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginTop="17dp"
+            android:layout_marginEnd="328dp"
+            android:layout_marginStart="10dp"
             android:layout_marginBottom="31dp"
             />
 
@@ -64,7 +66,7 @@
             android:id="@+id/applyview"
             android:layout_width="130dp"
             android:layout_height="25dp"
-            android:text="APPLYING IN"
+            android:text="@string/applying_in"
             android:textColor="@color/blue"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -73,12 +75,14 @@
             />
         <TextView
             android:layout_width="180dp"
+            android:paddingTop="2dp"
             android:layout_height="25dp"
             android:id="@+id/webview"
-            android:text="  WEB DEVELOPMENT  "
+            android:text="@string/web_development"
             android:layout_marginTop="30dp"
             android:layout_marginStart="170dp"
-            android:paddingLeft="15dp"
+            android:paddingStart="15dp"
+            android:paddingEnd="10dp"
             android:layout_marginEnd="20dp"
             android:textSize="15sp"
             android:textColor="@color/white"
@@ -92,30 +96,33 @@
             android:text="@string/name_contact"
             android:textSize="15sp"
             android:layout_marginTop="90dp"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:id="@+id/number"
-            android:text="   970XXXXXXX"
-            android:paddingStart="5dp"
+            android:text="@string/_970xxxxxxx"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:textSize="15sp"
             android:layout_marginTop="88dp"
             android:layout_marginStart="260dp"
             android:layout_marginEnd="20dp"
             android:background="@drawable/numberstroke"/>
-        <EditText
 
+        <EditText
             android:layout_width="161dp"
             android:layout_height="28dp"
             android:id="@+id/editetxt1"
-            android:hint="  FIRST NAME "
+            android:hint="@string/first_name"
+            android:paddingStart="10dp"
+            android:paddingEnd="5dp"
             android:textStyle="normal"
             android:inputType="textMultiLine"
             android:background="@drawable/edittext1stroke"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="130dp"
             android:padding="2dp"
             android:textSize="15sp"/>
@@ -125,7 +132,9 @@
             android:layout_width="161dp"
             android:layout_height="28dp"
             android:id="@+id/edittext2"
-            android:hint="  Last Name "
+            android:hint="@string/last_name"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:layout_marginTop="130dp"
             android:layout_marginStart="232dp"
             android:background="@drawable/edittext1stroke"
@@ -136,11 +145,11 @@
             android:layout_width="374dp"
             android:layout_height="28dp"
             android:id="@+id/edittext3"
-            android:hint="  Email Address  "
-            android:padding="2dp"
-
+            android:hint="@string/email_address"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:layout_marginTop="175dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:textSize="15sp"
             android:background="@drawable/edittext1stroke"
             />
@@ -148,10 +157,12 @@
             android:layout_width="374dp"
             android:layout_height="28dp"
             android:id="@+id/edittext4"
-            android:hint="GitLab @UserName"
-            android:paddingLeft="10dp"
+            android:hint="@string/gitlab_username"
+            android:paddingStart="10dp"
+            android:paddingEnd="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_marginTop="215dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:textSize="15sp"
             android:background="@drawable/edittext1stroke"
             />
@@ -174,7 +185,7 @@
             android:layout_width="304dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text=" COLLEGE "
+            android:text="@string/college"
             android:textSize="15sp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="0dp"
@@ -185,9 +196,10 @@
             android:id="@+id/other"
             android:layout_width="70dp"
             android:layout_height="30dp"
-            android:text="GITAM"
+            android:text="@string/gitam"
             android:textColor="@color/blue"
-            android:paddingRight="10dp"
+            android:paddingEnd="10dp"
+            android:paddingStart="10dp"
             android:background="@drawable/numberstroke"
             android:textSize="15sp"
             android:layout_marginTop="10dp"
@@ -197,7 +209,7 @@
             android:id="@+id/othermain"
             android:layout_width="70dp"
             android:layout_height="30dp"
-            android:text="OTHER"
+            android:text="@string/other"
             android:background="@drawable/rounded_text1"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
@@ -212,8 +224,9 @@
             android:layout_width="374dp"
             android:layout_height="30dp"
             android:layout_marginTop="60dp"
-            android:hint="Name of the college "
-            android:paddingLeft="10dp"
+            android:hint="@string/name_of_the_college"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:textSize="15sp"
             android:layout_marginStart="20dp"
             android:background="@drawable/edittext1stroke"
@@ -223,8 +236,9 @@
             android:layout_width="374dp"
             android:layout_height="28dp"
             android:layout_marginTop="100dp"
-            android:hint=" Branch of Study "
-            android:paddingLeft="10dp"
+            android:hint="@string/branch_of_study"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:layout_marginStart="20dp"
             android:background="@drawable/edittext1stroke"
             android:textSize="15sp"
@@ -235,8 +249,9 @@
             android:layout_height="30dp"
             android:layout_marginTop="140dp"
             android:layout_marginStart="20dp"
-            android:paddingLeft="10dp"
-            android:hint="Student Registration ID"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:hint="@string/student_registration_id"
             android:textSize="15sp"
             android:background="@drawable/edittext1stroke"
             />
@@ -244,9 +259,10 @@
         <TextView
             android:layout_width="100dp"
             android:layout_height="20dp"
-            android:text="Years of study"
+            android:text="@string/years_of_study"
             android:layout_marginTop="190dp"
             android:layout_marginStart="20dp"
+            android:layout_marginEnd="0dp"
             android:textSize="15sp"
             />
         <Spinner
@@ -263,7 +279,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:id="@+id/to"
-            android:text=" to "
+            android:text="@string/to"
             android:textColor="@color/blue"
             android:textSize="15sp"
             android:layout_marginTop="190dp"
@@ -283,10 +299,35 @@
             android:layout_width="90dp"
             android:layout_height="20dp"
             android:id="@+id/resume"
-            android:text="RESUME/CV"
-            android:textSize="15dp"
+            android:text="@string/resume_cv"
+            android:textSize="15sp"
+            android:textColor="@color/lightblack"
             android:layout_marginTop="250dp"
             android:layout_marginStart="20dp"
+            />
+        
+        <TextView
+            android:layout_width="150dp"
+            android:layout_height="35dp"
+            android:id="@+id/format"
+            android:layout_marginStart="180dp"
+            android:layout_marginTop="245dp"
+            android:text="@string/resume_name_pdf"
+            android:textSize="15sp"
+            android:textColor="@color/lightblack"
+            android:background="@drawable/numberstroke"
+
+            />
+        <Button
+            android:layout_width="40dp"
+            android:layout_height="45dp"
+            android:id="@+id/upload"
+            android:text="@string/upl"
+            android:textSize="25sp"
+            android:layout_marginStart="350dp"
+            android:layout_marginTop="238dp"
+            android:textColor="@color/lightblack"
+            android:background="@drawable/edittext1stroke"
             />
 
         <Button
@@ -296,7 +337,7 @@
             android:layout_marginTop="310dp"
             android:layout_marginStart="79dp"
             android:layout_marginEnd="20dp"
-            android:text=" SAVE TO PROFILE"
+            android:text="@string/save_to_profile"
             android:textColor="@color/blue"
             android:textSize="15sp"
             android:background="@drawable/edittext1stroke"
@@ -309,7 +350,7 @@
             android:layout_marginTop="310dp"
             android:layout_marginStart="240dp"
             android:textSize="15sp"
-            android:text="APPLY NOW"
+            android:text="@string/apply_now"
             android:textColor="@color/white"
             android:background="@drawable/rounded_text1"
             />
