--- a/app/src/main/res/layout/activity_gitam_web.xml
+++ b/app/src/main/res/layout/activity_gitam_web.xml
@@ -255,6 +255,35 @@
             android:layout_marginTop="250dp"
             android:layout_marginStart="20dp"
             />
+
+
+        <TextView
+            android:layout_width="150dp"
+            android:layout_height="35dp"
+            android:id="@+id/format"
+            android:layout_marginStart="180dp"
+            android:layout_marginTop="245dp"
+            android:text="@string/resume_name_pdf"
+            android:textSize="15sp"
+            android:textColor="@color/lightblack"
+            android:background="@drawable/numberstroke"
+
+            />
+        <Button
+            android:layout_width="40dp"
+            android:layout_height="45dp"
+            android:id="@+id/upload"
+            android:text="@string/upl"
+            android:textSize="25sp"
+            android:layout_marginStart="350dp"
+            android:layout_marginTop="238dp"
+            android:textColor="@color/lightblack"
+            android:background="@drawable/edittext1stroke"
+            />
+
+
+
+
         
         
         <Button
