--- a/app/src/main/res/layout/activity_web_development.xml
+++ b/app/src/main/res/layout/activity_web_development.xml
@@ -193,7 +193,7 @@
             />
 
         <Button
-            android:id="@+id/other"
+            android:id="@+id/git"
             android:layout_width="70dp"
             android:layout_height="30dp"
             android:text="@string/gitam"
